hphp/test/slow/reified_generics/incorrect-num-reified-extends-1.php.expectf
Fatal error: Class C requires 1 generics but 2 given in %s on line 6
